2023-02-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use value of fourth argument in genvector() as step size by default if 1 (default), negative, or non-integer, and value of sixth argument is -1 (default)

2023-02-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Prefer Nm (torque) over J when the result is a vector with three components
	* Fix unit order for Nm and Ws
	* Always use output using current number base in both base and exponent in scientific notation
	* Indicate correct number base in subscript (in html formatted output) when output in original base fails
	* Do not show multiplier if exactly 1, in html output of scientific notation
	* Fix parsing of scientific e notation when the number is extremely large and exponentiation fails because of floating point overflow

2023-02-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use Unicode symbol for minus in scientific e notation
	* Allow the same variable left and right of the equals sign (e.g. var=var+2), in variable assignment without colon, if the variable exists and the previous value is known

2023-01-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "amp" abbreaviation to ampere unit

2023-01-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Don't show anything on empty input in qalc
	* Set zero as max prefix for litre
	* Fix prefix selection in denominator when multiplier is higher than the value of the largest prefix
	* Make sure that prefixes are stored in correct order

2023-01-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add min and max preferred prefix properties to units, and use kilo as max for meter, gram, and zero as min for byte, and bit)

2023-01-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option to change symbols used for output of digits 10 and 11 in duodecimal numbers. Default digits are now A and B, instead of ↊ and ↋ (or X and E).

2023-01-10 Hanna Knutsson <hanna.knutsson@protonmail.com>
