@@ -1072,8 +1072,8 @@ DecimalPrefix *Calculator::getOptimalDecimalPrefix(int exp10, int exp, bool all_
 	DecimalPrefix *p = NULL, *p_prev = NULL;
 	int exp10_1, exp10_2;
 	while((exp < 0 && i >= 0) || (exp >= 0 && i < (int) decimal_prefixes.size())) {
-		if(all_prefixes || decimal_prefixes[i]->exponent() % 3 == 0) {
-			p = decimal_prefixes[i];
+		p = decimal_prefixes[i];
+		if(all_prefixes || (p->exponent() % 3 == 0 && p->exponent() >= -24 && p->exponent() <= 24)) {
 			if(p_prev && (p_prev->exponent() >= 0) != (p->exponent() >= 0) && p_prev->exponent() != 0) {
 				if(exp < 0) {
 					i++;
@@ -1086,7 +1086,7 @@ DecimalPrefix *Calculator::getOptimalDecimalPrefix(int exp10, int exp, bool all_
 				if(p == decimal_null_prefix) return NULL;
 				return p;
 			} else if(p->exponent(exp) > exp10) {
-				if((exp >= 0 && i == 0) || (exp < 0 && i == (int) decimal_prefixes.size())) {
+				if((exp < 0 && (i == (int) decimal_prefixes.size() - 1 || (!all_prefixes && p->exponent() == 24))) || (exp >= 0 && (i == 0 || (!all_prefixes && p->exponent() == -24)))) {
 					if(p == decimal_null_prefix) return NULL;
 					return p;
 				}
@@ -1125,8 +1125,8 @@ DecimalPrefix *Calculator::getOptimalDecimalPrefix(const Number &exp10, const Nu
 	DecimalPrefix *p = NULL, *p_prev = NULL;
 	Number exp10_1, exp10_2;
 	while((exp.isNegative() && i >= 0) || (!exp.isNegative() && i < (int) decimal_prefixes.size())) {
-		if(all_prefixes || decimal_prefixes[i]->exponent() % 3 == 0) {
-			p = decimal_prefixes[i];
+		p = decimal_prefixes[i];
+		if(all_prefixes || (p->exponent() % 3 == 0 && p->exponent() >= -24 && p->exponent() <= 24)) {
 			if(p_prev && (p_prev->exponent() >= 0) != (p->exponent() >= 0) && p_prev->exponent() != 0) {
 				if(exp.isNegative()) {
 					i++;
@@ -1140,7 +1140,7 @@ DecimalPrefix *Calculator::getOptimalDecimalPrefix(const Number &exp10, const Nu
 				if(p == decimal_null_prefix) return NULL;
 				return p;
 			} else if(c == COMPARISON_RESULT_GREATER) {
-				if((exp.isNegative() && i == (int) decimal_prefixes.size() - 1) || (!exp.isNegative() && i == 0)) {
+				if((exp.isNegative() && (i == (int) decimal_prefixes.size() - 1 || (!all_prefixes && p->exponent() == 24))) || (!exp.isNegative() && (i == 0 || (!all_prefixes && p->exponent() == -24)))) {
 					if(p == decimal_null_prefix) return NULL;
 					return p;
 				}
